# cf_temp

./: .gitattributes  .gitignore  INSTRUCTIONS.md  INSTRUCTIONS_genetic.md  README.md  RELEASE.md  evaluation_counterfactual.py  evaluation_model.py  example.py  generating_counterfactual.py  preprocessing.py  pyproject.toml  training.py
artifacts/: Readme.txt  var_list.csv
assets/: dashboard.css
configs/: __init__.py  defaults.py
counterfactual_methods/: __init__.py  anomaly_repair.py  pipeline.py
evaluation/: counterfactual.py  reconstruction.py
exp/: anomaly_transformer.py  atacama.ipynb  atacama_jupyter.py  atacama_xai_all_results.pkl  atacama_xai_comparison.csv  example1.py  example2.py  example3.py  example4.py  example5.py  example5_lstm.py  example5_tcn.py  example5_tcn_att.py  example6.py  example7.py  run_batch_cf.py
exp/atacama_checkpoints/: performance_summary.json
experiments/: runtime.py  stages.py  training.py
methods/: annealing.py  base.py  clamp.py  comte_final.py  generative_final.py  genetic.py  genetic_cf.py  growing_spheres.py  latent_cf.py  latent_final.py  motif.py  nearest_prototype.py  runner.py  segment_substitution.py
methods/comte/: Candidate_Selection_Validation.py  Constraint_Evaluation.py  Failure_Handling.py  NormalCore_Donor_Matching.py  Segment_Candidate_Generation.py  Segment_Substitution_Engine.py
models/: __init__.py  autoencoder.py  data_module.py
preprocessing/: data.py
run/: run.py  run_all.py  timeshap20.py
utils/: exp_logger.py  metrics.py  plot_counterfactual.py  plot_pack.py  scoring.py  storage.py
(+1003 files in other folders)
